syntax = "proto3";
package pryzm.amm.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/pryzm-finance/pryzm-core/x/amm/types/v1";

// PoolType enumerates the valid types for pool_type.
enum PoolType {
  option (gogoproto.goproto_enum_prefix) = false;
  POOL_TYPE_WEIGHTED = 0 [(gogoproto.enumvalue_customname) = "WeightedPoolType"];
  POOL_TYPE_YAMM = 1 [(gogoproto.enumvalue_customname) = "YammPoolType"];
}

message PoolPauseWindow {
  int64 pause_window_end_unix_millis = 1;
  int64 buffer_period_end_unix_millis = 2;
}

message Pool {
  uint64 id = 1;
  string name = 2;
  // this is the constant swap fee ratio, for dynamic swap fees other pools might have other parameters.
  // for example, check yamm configuration
  string swap_fee_ratio = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  PoolType pool_type = 4;
  string creator = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  bool recovery_mode = 6;
  bool paused_by_gov = 7;
  bool paused_by_owner = 8;
  PoolPauseWindow owner_pause_window_timing = 9 [(gogoproto.nullable) = true];
  // if protocol fee parameters are nil, then the values are read from treasury module parameters
  string swap_protocol_fee_ratio = 10 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true
  ];
  string join_exit_protocol_fee_ratio = 11 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true
  ];
  // if not empty, only these addresses can initialize the pool
  repeated string initialization_allow_list = 12;
  // these have the same permissions as the creator, except for
  // updating the admins list and pausing the pool
  repeated string admins = 13;
  repeated string pause_allow_list = 14;
}
